# evo_ui_engine

./: .gitattributes  .gitignore  README.md  eval "$(ssh-agent -s)"  eval "$(ssh-agent -s)".pub
project/: Cargo.toml  ui.toml
project/examples/: offscreen.rs  offscreen_frames.rs  toml_render.rs  winit_window.rs
project/src/: lib.rs
project/src/actors/: mod.rs
project/src/actors/animator/: animate_codomain.rs  animate_domain.rs  animator.rs  mod.rs
project/src/actors/event_interpreter/: event_interpreter.rs  (+2 more)
project/src/animator/: animate_codomain.rs  animate_domain.rs  animator.rs  codominio.rs  dominio.rs  mod.rs
project/src/contracts/: mod.rs  prelude.rs
project/src/core/: mod.rs  render_domain.rs  rendered_frame.rs  translate_codomain.rs  translate_domain.rs
project/src/event/: animation_frame.rs  event.rs  mod.rs
project/src/event_interpreter/: codominio.rs  dominio.rs  event_interpreter.rs  interpret_codomain.rs  interpret_domain.rs  mod.rs
project/src/event_translator/: event_translator.rs  mod.rs  translate_codomain.rs  translate_domain.rs
project/src/renderer/: codominio.rs  dominio.rs  mod.rs  renderer.rs
project/src/runtime/: app.rs  mod.rs  toml_app.rs  winit_runtime.rs
project/src/scene/: acetate.rs  acetate_io.rs  acetate_stub.rs  design.rs  metrics.rs  mod.rs  rect.rs  scene.rs  scene_info.rs
project/src/time_ticker/: codominio.rs  dominio.rs  mod.rs  tick_codomain.rs  time_ticker.rs
project/src/translator/: codominio.rs  dominio.rs  mod.rs  translate_domain.rs  translator.rs
project/src/ui_toml/: compile.rs  mod.rs  schema.rs
(+40 files in other folders)
