[package]
name = "evo_ui_engine"
version = "0.1.0"
edition = "2024"

[dependencies]
vello = { version = "0.5", default-features = false, features = ["wgpu"] }
kurbo = { version = "0.11", features = ["std"] }
pollster = "0.4"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
